// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Environment empty global graphcool rc 1`] = `
Array [
  Cluster {
    "baseUrl": "https://graphcool-eu1.graphcool.cloud",
    "clusterSecret": undefined,
    "local": false,
    "name": "graphcool-eu1",
  },
  Cluster {
    "baseUrl": "https://graphcool-us1.graphcool.cloud",
    "clusterSecret": undefined,
    "local": false,
    "name": "graphcool-us1",
  },
]
`;

exports[`Environment interpolates env vars 1`] = `
Array [
  Cluster {
    "baseUrl": "https://graphcool-eu1.graphcool.cloud",
    "clusterSecret": undefined,
    "local": false,
    "name": "graphcool-eu1",
  },
  Cluster {
    "baseUrl": "https://graphcool-us1.graphcool.cloud",
    "clusterSecret": undefined,
    "local": false,
    "name": "graphcool-us1",
  },
]
`;

exports[`Environment loads multiple cluster definitions correctly + gives cluster by name 1`] = `
Array [
  Cluster {
    "baseUrl": "https://graphcool-eu1.graphcool.cloud",
    "clusterSecret": undefined,
    "local": false,
    "name": "graphcool-eu1",
  },
  Cluster {
    "baseUrl": "https://graphcool-us1.graphcool.cloud",
    "clusterSecret": undefined,
    "local": false,
    "name": "graphcool-us1",
  },
]
`;

exports[`Environment loads multiple cluster definitions correctly + gives cluster by name 2`] = `undefined`;

exports[`Environment non-existent global graphcool rc 1`] = `
Array [
  Cluster {
    "baseUrl": "https://graphcool-eu1.graphcool.cloud",
    "clusterSecret": undefined,
    "local": false,
    "name": "graphcool-eu1",
  },
  Cluster {
    "baseUrl": "https://graphcool-us1.graphcool.cloud",
    "clusterSecret": undefined,
    "local": false,
    "name": "graphcool-us1",
  },
]
`;

exports[`Environment persists .graphcoolrc correctly 1`] = `
"graphcool-1.0:
  clusters:
    cluster:
      host: 'http://localhost:60000'
      clusterSecret: ''
"
`;

exports[`Environment persists .graphcoolrc correctly 2`] = `
Array [
  Cluster {
    "baseUrl": "https://graphcool-eu1.graphcool.cloud",
    "clusterSecret": undefined,
    "local": false,
    "name": "graphcool-eu1",
  },
  Cluster {
    "baseUrl": "https://graphcool-us1.graphcool.cloud",
    "clusterSecret": undefined,
    "local": false,
    "name": "graphcool-us1",
  },
  Cluster {
    "baseUrl": "http://localhost:60000",
    "clusterSecret": "",
    "local": true,
    "name": "cluster",
  },
]
`;

exports[`Environment sets the platform token correctly 1`] = `
Array [
  Cluster {
    "baseUrl": "https://graphcool-eu1.graphcool.cloud",
    "clusterSecret": undefined,
    "local": false,
    "name": "graphcool-eu1",
  },
  Cluster {
    "baseUrl": "https://graphcool-us1.graphcool.cloud",
    "clusterSecret": undefined,
    "local": false,
    "name": "graphcool-us1",
  },
]
`;
